Purchase Event, Request Purchase Player Action, Begin of Vault Integration